fix : overflow auto

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ header i>span{
 /* main */
 main{
      /* height: 100% */
+     height: calc(100vh - 180px); /*view height - il tot di footer + header + margini*/
 }
 .gallery{
     margin: 5px;
@@ -41,7 +42,7 @@ main{
     flex-wrap: wrap;
     overflow: auto;
     /* height: 1000px; */
-    height: calc(100vh - 150px);
+    height: 100%;
 }
 
 .user{
